* code clean up
  - check for code where list functions should be used instead
  - check for code where tree functions should be used instead

TOOLS
olecfinfo
* print basic file data (partial)
* print allocation data
* print stream/directory data (partial)
* print summary information (partial)
* print compobj stream info

DEPLOYMENT
* update manuals

20140930
* removed README.macosx

20140810
* worked on libfwps support

20140801
* bug fix in Python-bindings

20140727
* worked on olecfmount Dokan support

20140726
* updated dependencies

20140329
* small changes to Makefile

20140323
* worked on Python bindings

20140317
* worked on setup.py

20140301
* 2014 update
* updated dependencies
* worked on Python bindings

20131209
* updated dependencies

20131108
* added support for 0 value sub directory entry not being used as index.

20131012
* added format version functions

20131011
* changes for non 512 sector sized files

20131009
* changes to dpkg files

20131008
* improved pyolecf as integer functions

20130929
* worked on setup.py, largely for MSI builds

20120928
* updated libfvalue and libfdatetime for filetime to integer functionality

20120925
* worked on API

20120924
* worked on pyolecf
* updated msvscpp files

20120923
* code clean up
* fixed memory leak in olecfexport for 0 byte streams

20120918
* worked on API
* olecfinfo: worked on property values

20120917
* code clean up
* worked on tests
* olecfmount: added extended options
* worked on API
* olecfinfo: worked on property values

20120916
* updated dependencies

20120717
* updated dependencies
* worked on tests
* olecfexport: fixed .export suffix

20120609
* updated dependencies

20120421
* worked on tests

20120414
* Textual changes
* worked on tests
* updates and bug fixes in pyolecf
* fixed codepage 949, 950 and 1255 restriction

20120413
* updated dependencies

20120319
* updated dependencies

20130305
* worked on libcdata integration
* worked on libfole

20130303
* worked on PackageMaker files
