@@ -1,4 +1,11 @@
-See:
-* http://code.google.com/p/libolecf/wiki/Building
-* README.macosx
+libolecf is a library to access the OLE 2 Compound File (OLECF) format.
+The OLE 2 Compound File format is used to store certain versions of Microsoft Office files, thumbs.db and other file formats.
+
+Planned:
+* Multi-threading support
+* Python 3 support
+
+For more information see:
+* Project documentation: https://github.com/libyal/libolecf/wiki/Home
+* How to build from source: https://github.com/libyal/libolecf/wiki/Building
 
