@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev, libfuse-dev, python-dev
 Standards-Version: 3.8.3
-Homepage: http://code.google.com/p/libolecf/
+Homepage: https://github.com/libyal/libolecf/
 
 Package: libolecf
 Section: libs
