@@ -12,10 +12,14 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSS0hEb0pjU2h6a2c/"
 
 [git]
-url: "https://code.google.com/p/libolecf/"
+url: "https://github.com/libyal/libolecf.git"
+
+[development]
+main_object: "file"
+main_object_filename: "Test.doc"
 
 [tests]
-features: ["valgrind"]
+features: ["profiles", "valgrind"]
 profiles: ["libolecf", "pyolecf", "olecfexport", "olecfinfo"]
 example_filename1: "Text.doc"
 example_filename2: "Numbers.xls"
