@@ -210,7 +210,7 @@ To have other code to determine if libolecf was compiled with wide character sup
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libolecf/
+https://github.com/libyal/libolecf/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
