@@ -86,6 +86,7 @@ DEPLOYMENT
 
 20140930
 * removed README.macosx
+* changes for project site move
 
 20140810
 * worked on libfwps support
